# ai-spam-guardian

./: .gitignore  LICENSE  README.md  avvia_app.bat  main.py  pyproject.toml
docs/: architettura.md
scripts/: analizza_confronto.py  analizza_feedback.py  avvia_gui.py  avvia_scheduler.py  confronta_modelli.py  esegui_pipeline.py  rivedi_classificazioni.py
src/: prova_auth.py  prova_lettura.py
src/spam_guardian/: auth.py  config.py
src/spam_guardian/core/: azioni.py  pipeline.py  scheduler.py
src/spam_guardian/db/: database.py  repository.py
src/spam_guardian/graph/: client.py
src/spam_guardian/gui/: main_window.py
src/spam_guardian/llm/: classifier.py
